# tracklet

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tracklet.db  tsconfig.json
docs/plans/: 2026-02-17-jira-menubar-tracker-design.md  2026-02-17-jira-menubar-tracker-implementation.md  2026-03-01-tracklet-ui-revamp-design.md  2026-03-01-ui-revamp-implementation.md
figmake-designs/tracklet-mvp/: README.md  index.html
scripts/: build-ui.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tracklet.db
src-tauri/migrations/: 0001_init.sql
src-tauri/src/: auth.rs  db.rs  jira.rs  lib.rs  main.rs  models.rs  timer_engine.rs
src/domain/: timer_state_machine.ts
src/ui/: App.tsx  api.ts  index.html  main.tsx  state.ts  styles.css
src/ui-dist/: main.js  styles.css
tests/domain/: jira-contract.test.ts  start-timer-payload.test.ts  timer-state-machine.test.ts
tests/smoke/: app-icon-assets.test.ts  macos-bundle-icon-config.test.ts  project-layout.test.ts  schema-smoke.test.ts  tray-icon-config.test.ts  tray-timer-command.test.ts  typescript-layout.test.ts  window-size-config.test.ts
tests/ui/: active-status-label.test.ts  analytics-format.test.ts  authorize-section-close.test.ts  custom-task-dropdown.test.ts  design-revamp-auth-flow.test.ts  hybrid-task-dropdown-empty-states.test.ts  native-popover-style.test.ts  offline-start-timer.test.ts  sleep-pause-resume.test.ts  start-stop-button-icon.test.ts  tabs-layout.test.ts  task-dropdown-position.test.ts  tray-timer-badge.test.ts
types/: node-compat.d.ts
(+14 files in other folders)
